# clone-hero-1click-charter

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  Makefile  README.md  SECURITY.MD  SETUP.md  TODO.md  USER_GUIDE.md  pyproject.toml  wrapper.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: release.yml
assets/icons/: AppIcon.icns
charter/: __init__.py  audio.py  chart_format.py  cli.py  config.py  ini.py  metadata.py  midi.py  reduction.py  sections.py  star_power.py  stats.py  validator.py
docs/: CHANGELOG.md  PRE_RELEASE_CHECKLIST.md  SETUP.md  TODO.md  USER_GUIDE.md
gui/: app.py  dialogs.py  main_window.py  panels.py  presets.py  qt_app.py  theme.py  ui_layout.py  updater.py  utils.py  widgets.py  worker.py
legacy_v1.3.0/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE
legacy_v1.3.0/charter/: ini.py  metadata.py  sections.py  star_power.py
scripts/: archiver.py  make_icons.py  make_icons.sh  setup_ffmpeg.py
tools/: clean_badsongs.py  make_icons.sh  release_local.sh  validator.py
