[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "1clickcharter"
version = "0.1.0"
description = "One-click Clone Hero chart generator for fun, playable Medium lead guitar charts"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Nicholas Zullo" }]
keywords = ["clone-hero", "midi", "charting", "audio", "rhythm-game"]

dependencies = [
  "pretty_midi>=0.2.10",
  "librosa>=0.10",
  "numpy>=1.23",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.6",
  "pytest>=8",
  "build>=1.2",
  "twine>=5.1",
]

gui = [
  "PySide6>=6.6",
]

[project.scripts]
1clickcharter = "charter.cli:main"

# Optional GUI entrypoint (only works if PySide6 is installed)
1clickcharter-gui = "gui.qt_app:main"

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["charter*", "gui*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
