[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "1clickcharter"
version = "2.1.2"
description = "One-click Clone Hero chart generator for fun, playable Medium lead guitar charts"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "Nicholas Zullo" }]
keywords = ["clone-hero", "midi", "charting", "audio", "rhythm-game"]

dependencies = [
  "pretty_midi>=0.2.10",
  "librosa>=0.10",
  "numpy>=1.23",
  "PySide6>=6.6",
  "pydub>=0.25.1",
  "mutagen>=1.45",
  "requests>=2.31",
  "packaging>=23.1",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.6",
  "pytest>=8",
  "build>=1.2",
  "twine>=5.1",
]

[project.scripts]
1clickcharter = "charter.cli:main"
1clickcharter-gui = "gui.qt_app:main"

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["charter*", "gui*", "assets*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
